--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
     </p>
 
     <p>띄어쓰기는 br태그를 이용합니다.<br>이렇게 됩니다.</p>
-    <!--strong과 b태그의 차이는 시각장애인 분들을 위함, TTS에서 strong태그가 강조해서 읽어줌-->
+    <!--strong과 b태그의 차이는 시각장애인 분들을 위함, TTS에서 strong태그가 강조해서 읽어줌,웬만하면 strong태그를 사용-->
     <p>요리를 할 때는 <strong>청결</strong>이 중요합니다.</p>
     <p>요리를 할 때는 <b>청결</b>이 중요합니다.</p>
     <!--TODO : 소제목 추가 예정-->
