--- a/HTML/Example/04_2_ex2_listTagulli.html
+++ b/HTML/Example/04_2_ex2_listTagulli.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <!--ul,li태그는 순서 없는 목록을 만듦-->
+    <ul>
+        <li>항목1</li>
+        <li>항목2</li>
+        <li>항목3</li>
+    </ul>
 </body>
+
 </html>
