--- a/HTML/Example/index.html
+++ b/HTML/Example/index.html
@@ -31,7 +31,7 @@
     <!--strong과 b태그의 차이는 시각장애인 분들을 위함, TTS에서 strong태그가 강조해서 읽어줌,웬만하면 strong태그를 사용-->
     <p>요리를 할 때는 <strong>청결</strong>이 중요합니다.</p>
     <p>요리를 할 때는 <b>청결</b>이 중요합니다.</p>
-    <!--TODO : 소제목 추가 예정-->
+    <!--협업 Tip: 할일 적어놓기 (TODO : 소제목 추가 예정)-->
 
     <!--strong과 마찬가지 em,i-->
     <em>돼지국밥</em>
