--- a/HTML/Example/04_3_ex1_tableTag.html
+++ b/HTML/Example/04_3_ex1_tableTag.html
@@ -14,6 +14,15 @@
         th,td {
             border: 1px solid black;
         }
+
+        .col1 {
+            background-color: yellow;
+        }
+
+        .col2 {
+            background-color: green;
+        }
+
     </style>
 </head>
 
@@ -36,6 +45,125 @@
             <td>90점</td>
         </tr>
     </table>
+
+    <br><hr><br>
+    
+    <table>
+        <caption>반 성적</caption>
+        <!--thead, tbody, tfoot 태그들은 보이는 화면에는 영향이 없지만, 코드짤때 가시성을 위해 사용-->
+        <thead>
+            <tr>
+                <th>1반</th>
+                <td>2반</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>80점</th>
+                <td>90점</td>
+            </tr>
+            <tr>
+                <th>90점</th>
+                <td>80점</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>foot1</td>
+                <td>foot2</td>
+            </tr>
+        </tfoot>
+    </table>
+
+<br><hr><br>
+
+    <table>
+        <caption>학급 성적표</caption>
+        <!--col과 colgroup태그는 열을 묶어줌-->
+        <colgroup>
+            <col class="col1">
+            <col class="col2">
+            <col>
+            <col>
+            <col>
+            <col>
+        </colgroup>
+        <tr>
+            <th>반</th>
+            <th>이름</th>
+            <th>국어</th>
+            <th>영어</th>
+            <th>수학</th>
+            <th>과학</th>
+        </tr>
+        <tr>
+            <td>1반</td>
+            <td>홍길동</td>
+            <td>100</td>
+            <td>80</td>
+            <td>90</td>
+            <td>90</td>
+        </tr>
+        <tr>
+            <td>1반</td>
+            <td>김철수</td>
+            <td>80</td>
+            <td>100</td>
+            <td>90</td>
+            <td>80</td>
+        </tr>
+        <tr>
+            <td>평균</td>
+            <td></td>
+            <td>80.5</td>
+            <td>80.5</td>
+            <td>90.5</td>
+            <td>75.5</td>
+        </tr>
+    </table>
+
+    <br><hr><br>
+
+    <table>
+        <caption>학급 성적표</caption>
+        
+        <tr>
+            <th>반</th>
+            <th>이름</th>
+            <th>국어</th>
+            <th>영어</th>
+            <th>수학</th>
+            <th>과학</th>
+        </tr>
+        <tr>
+            <!--rowspan 태그는 행을 합쳐줌-->
+            <td rowspan="2">1반</td>
+            <td>홍길동</td>
+            <td>100</td>
+            <td>80</td>
+            <td>90</td>
+            <td>90</td>
+        </tr>
+        <tr>
+            <!-- <td>1반</td> -->
+            <td>김철수</td>
+            <td>80</td>
+            <td>100</td>
+            <td>90</td>
+            <td>80</td>
+        </tr>
+        <tr>
+            <!--colspan 태그는 열을 합쳐줌-->
+            <td colspan="2">평균</td>
+            <!-- <td></td> -->
+            <td>80.5</td>
+            <td>80.5</td>
+            <td>90.5</td>
+            <td>75.5</td>
+        </tr>
+
+    </table>
+
 
 </body>
 
