--- a/HTML/Traning/04_TEST.html
+++ b/HTML/Traning/04_TEST.html
@@ -24,7 +24,7 @@
         <li>정기자로 진급하면 장학금 지급</li>
     </ol>
 
-    <img src="images/mic.JPG" alt="mic">
+    <img src="images/mic.JPG" width="600px" height="300px" alt="mic">
 
 </body>
 </html>
