--- a/HTML/Traning/04_TEST.html
+++ b/HTML/Traning/04_TEST.html
@@ -14,8 +14,8 @@
     <ul>
         <li><strong>모집 기간 : </strong>3월 2일 ~ 3월 11일</li>
         <li><strong>모집 분야 : </strong>아나운서, PD, 엔지니어</li>
-        <li><strong>지원 방법 : </strong>양식 작성 후 이메일 접수
-            <br><i>지원서 양식은 교내 방송국 홈페이지 공지 게시판에 있습니다.</i>
+        <li><strong>지원 방법 : </strong>양식 작성 후 이메일 접수<br>
+            <em>지원서 양식은 교내 방송국 홈페이지 공지 게시판에 있습니다.</em>
         </li>
     </ul>
 
