--- a/HTML/Example/05_1_ex1_formTag.html
+++ b/HTML/Example/05_1_ex1_formTag.html
@@ -16,6 +16,7 @@
             <legend>고객 정보</legend>
             <!--input 태그를 사용할때 lael과 함께 사용함, label for는 input의 id=""값과 맞춰줘야함-->
             <!--label은 없어도되지만, 유저의 편의성을 위해 사용, ID라는 글자를 클릭해도 포커스를 입력창으로 잡아줌-->
+            <!--입력창으로 포커스를 잡아줄려면, label for=""값과 input의 id값이 같아야함-->
             <label for="id">ID</label>
             <!--input은 입력창을 만들어줌-->
             <!--name값은 중복될수있지만, id값은 중복되면안됨-->
