--- a/HTML/Traning/05_inputTagTest.html
+++ b/HTML/Traning/05_inputTagTest.html
@@ -30,6 +30,21 @@
                     <label for="pwr">비밀번호 확인</label>
                     <input type="password" id="pwr" required>
                 </li>
+                <li>
+                    <!--span태그는 아무의미 없이, 태그로 감싸주기를 위한 태그-->
+                    <span>가입 경로</span><br>
+
+                    <label for="select">가입 경로</label>
+                    <select name="select" id="select">
+                        <option value="0">블로그</option>
+                        <option value="1">지인 소개</option>
+                        <option value="2">기타</option>
+                    </select>
+                </li>
+                <li>
+                    <label for="textbox">메모</label>
+                    <textarea name="textbox" id="textbox" cols="40" rows="4" placeholder="남길 말씀이 있다면 여기에"></textarea>
+                </li>
             </ul>
         </fieldset>
         <fieldset>
