--- a/HTML/Traning/05_inputTagTest.html
+++ b/HTML/Traning/05_inputTagTest.html
@@ -38,7 +38,7 @@
                     <select name="select" id="select">
                         <option value="0">블로그</option>
                         <option value="1">지인 소개</option>
-                        <option value="2">기타</option>
+                        <option value="2" selected>기타</option>
                     </select>
                 </li>
                 <li>
