--- a/CSS/Example/06_3_ex1_selector.html
+++ b/CSS/Example/06_3_ex1_selector.html
@@ -12,17 +12,17 @@
             margin: 0;
         }
         
-        /* h1, a, span등의 태그는 타입 선택자 */
+        /* h1, a, span등의 특정 태그는 타입 선택자 */
         h1 {
             color: blue;
         }
 
-        /* class=""속성을 줘서 사용하면 클래스 선택자 */
+        /* class=""속성을 줘서 사용하면 클래스 선택자, .을 사용 */
         .bk_gray {
             background-color: gray;
         }
 
-        /* id=""속성을 줘서 사용하면 ID 선택자 */
+        /* id=""속성을 줘서 사용하면 ID 선택자, #을 사용 */
         #cook1 {
             font-size: large;
         }
