--- a/CSS/Traning/07_TEST.html
+++ b/CSS/Traning/07_TEST.html
@@ -13,12 +13,13 @@
         탐라국 입춘굿놀이는 전국적으로 유일하게 입춘날 벌어지는 축제이자 제주도의 문화축제 중에서 유일하게 전통시대부터 존재했던 축제이다
     </p>
     <p>
-    제주에서 입춘은 새철 드는 날.
-    <br>
-    신구간이 끝나 하늘의 1만8000신이 지상으로 내려와 새해 일들을 시작하는 때다.
+        제주에서 입춘은 새철 드는 날.
+        <br>
+        신구간이 끝나 하늘의 1만8000신이 지상으로 내려와 새해 일들을 시작하는 때다.
     </p>
     <p>자세한 정보 보기</p>
-    <h2 class="blue" id="size2">일정</h2>
+    <h2>일정</h2>
+    <br>
     <ol>
         <li>입춘맞이 : 1/27(월) ~ 1/31(금)</li>
         <li>냥쉐코사 : 2/1(토)</li>
@@ -26,7 +27,8 @@
         <li>열림굿 : 2/3(월)</li>
         <li>입춘굿 : 2/4(화)</li>
     </ol>
-    <h2 class="blue">먹거리</h2>
+    <br>
+    <h2>먹거리</h2>
     <table>
         <tr>
             <th>입춘 천냥 국수</th>
