--- a/CSS/Traning/07_TEST3.html
+++ b/CSS/Traning/07_TEST3.html
@@ -5,16 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/07_TEST3.css">
+    <link rel="stylesheet" href="../Example/css/07_TEST3.css">
 </head>
 <body>
-    <div class="bk_black_a">
-        <h1>가정용 꿀사과</h1>
-        <p class="orange">
-            흠집이 있고 약간은 못생겼지만 맛과 영양은 그대로입니다
-            <br>
-            질좋은 사과를 저렴하게 즐겨보세요
-        </p>
+    <div class="container">
+        <div class="img_con">
+            <div class="img"><img src="../Example/IMG/apple.png" alt="가정용 꿀사과"></div>
+            <div class="bk_black_a">
+                <div class="bk_black_aa">
+                    <h1>가정용 꿀사과</h1>
+                    <p class="orange">
+                        흠집이 있고 약간은 못생겼지만 맛과 영양은 그대로입니다
+                        <br>
+                        질좋은 사과를 저렴하게 즐겨보세요
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="bk_black">확인하세요</div>
     <div class="center">
