--- a/CSS/Example/08_ex1_boxModel.html
+++ b/CSS/Example/08_ex1_boxModel.html
@@ -8,11 +8,18 @@
     <link rel="stylesheet" href="css/08_ex1_boxModel.css">
 </head>
 <body>
-    <h1 class="h1_1">박스 모델</h1>
+    <div class="h1_1">박스 모델
+        <br> (border-box)
+    </div>
     <hr>
-    <h1 class="h1_2">박스 모델</h1>
+    <div class="h1_2">박스 모델
+        <br> (content-box)
+    </div>
     <br><br>
-
+    <div class="div_3">
+        박스 모델(그림자 효과)
+    </div>
+    <br>
     <span>스판</span>
 </body>
 </html>
