--- a/CSS/Traning/08_TEST4.html
+++ b/CSS/Traning/08_TEST4.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div id="container">
-        <div class="header">헤더</div>
+        <header>헤더</header>
         <div class="flex">
             <div class="sb_left">사이드 바</div>
             <div class="main">본문</div>
             <div class="sb_right">사이드 바</div>
         </div>
-        <div class="footer">푸터</div>
+        <footer>푸터</footer>
     </div>
 </body>
 </html>
