--- a/HTML/Example/04_4_ex1_imgTag.html
+++ b/HTML/Example/04_4_ex1_imgTag.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .layer1 {
+            width: 200px;
+            height: 100px;
+        }
+    </style>
 </head>
 <body>
     
     <!-- src는 필수속성, alt는 웹 접근성 향상을 위해 적어주는 속성 -->
     <!-- px로 크기를 주면, 반응형으로 늘어나고 줄어들지않음 -->
-    <img src="Layer1.JPG" alt="레이어1" width="80%" height="80%">
+    <img class="layer1" src="../Example/media/Layer1.JPG" alt="레이어1" width="80%" height="80%">
 
     <img src="http://127.0.0.1:5500/HTML/Example/Layer1.JPG" alt="레이어1">
 
