--- a/HTML/Example/05_2_ex1_inputTagType.html
+++ b/HTML/Example/05_2_ex1_inputTagType.html
@@ -23,7 +23,7 @@
                 <br><br>
 
                 <!-- readonly는 읽기전용, 이전페이지에서 입력했던 값들을 보여주거나 할때 사용 -->
-                <label for="readinly">참조사항</label>
+                <label for="readonly">참조사항</label>
                 <input type="text" readonly value="참조">
                 <br><br>
 
