--- a/CSS/10_TEST2.html
+++ b/CSS/10_TEST2.html
@@ -33,10 +33,8 @@
             <br><br>
 
             <label for="submit"></label>
-            <input type="submit" title="내용을 다시 한 번 확인해 주세요." value="보내기" id="hover" class="not">
-            <div class="div_hover">
-                <span class="button_hover">내용을 다시 한 번 확인해 주세요</span>
-            </div>
+            <input type="submit" value="보내기" id="hover" class="not">
+            <span class="button_hover">내용을 다시 한 번 확인해 주세요</span>
         </form>
     </fieldset>
 </body>
