--- a/CSS/Example/12_4_ex1_flexbox.html
+++ b/CSS/Example/12_4_ex1_flexbox.html
@@ -11,7 +11,7 @@
     <div class="flex_container">
         <div class="flex_item">1</div>
         <div class="flex_item">2</div>
-        <div class="flex_item">3</div>
+        <div class="flex_item item_3">3</div>
         <div class="flex_item">4</div>
         <div class="flex_item">5</div>
     </div>
