--- a/CSS/Example/10_1_ex1_selector.html
+++ b/CSS/Example/10_1_ex1_selector.html
@@ -12,27 +12,29 @@
         <div>
             <span>header - div - span</span>
         </div>
-        <span id="span1">header - span</span>
+        <span>header - span</span>
     </header>
     <br><br>
 
     <main>
         <div>
-            <span>header - div - span</span>
+            <span>main - div - span</span>
         </div>
-        <span>header - span1</span>
-        <p>header - p1</p>
-        <span>header - span2</span>
-        <span>header - span3</span>
+        <span>main - span1</span>
+        <p>main - p1</p>
+        <p>main - p2</p>
+        <span>main - span2</span>
+        <span>main - span3</span>
     </main>
 
     <main>
         <div class="div3">
-            <span>header - div - span</span>
+            <span>main - div - span</span>
         </div>
-        <span>header - span1</span>
-        <span>header - span2</span>
-        <span>header - span3</span>
+        <span>main - span1</span>
+        <span>main - span2</span>
+        <span>main - span3</span>
+        <p>main - p</p>
     </main>
 
 </body>
