--- a/CSS/Example/naverLogin.html
+++ b/CSS/Example/naverLogin.html
@@ -54,18 +54,18 @@
             </div>
         </form>
         <div class="find">
-            <a href="#" class="border_r">비밀번호 찾기</a>
-            <a href="#" class="border_r">아이디 찾기</a>
-            <a href="#">회원 가입</a>
+            <a href="https://nid.naver.com/user2/help/pwInquiry?lang=ko_KR" class="border_r">비밀번호 찾기</a>
+            <a href="https://nid.naver.com/user2/help/idInquiry?lang=ko_KR" class="border_r">아이디 찾기</a>
+            <a href="https://nid.naver.com/user2/V2Join?m=agree&lang=ko_KR">회원 가입</a>
         </div>
         <div class="ad"></div>
     </main>
     <footer>
         <div>
-            <span class="border_r"><a href="#">이용약관</a></span>
-            <span class="border_r"><a href="#" class="font_bold">개인정보처리방침</a></span>
-            <span class="border_r"><a href="#">책임의 한계와 법적고지</a></span>
-            <span><a href="#">회원정보 고객센터</a></span>
+            <span class="border_r"><a href="https://policy.naver.com/rules/service.html">이용약관</a></span>
+            <span class="border_r"><a href="https://policy.naver.com/rules/privacy.html" class="font_bold">개인정보처리방침</a></span>
+            <span class="border_r"><a href="https://policy.naver.com/rules/disclaimer.html">책임의 한계와 법적고지</a></span>
+            <span><a href="https://help.naver.com/service/5640/category/bookmark?lang=ko">회원정보 고객센터</a></span>
         </div>
         <div class="footer_margin_top">
             <span class="mini_logo">
