--- a/JavaScript/27_array/27_array.html
+++ b/JavaScript/27_array/27_array.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>함수</title>
+    <title>배열</title>
 </head>
 <body>
     
-    <script src="./12_function.js"></script>
+    <script src="./27_array.js"></script>
 </body>
 </html>
