--- a/JavaScript/40_event/40_event.html
+++ b/JavaScript/40_event/40_event.html
@@ -17,8 +17,9 @@
     <br>
     <button onclick="colorChange();">배경</button>
     <br>
-    <button onclick="fontBig(16);">폰트 크게</button>
-    <button onclick="fontSmall(16);">폰트 작게</button>
+    <button onclick="fontBig( fontSize );">폰트 크게</button>
+    <button onclick="fontSmall( fontSize );">폰트 작게</button>
+    <button onclick="fontDefault( fontSize );">폰트 원래대로</button>
     <p id="id_p">무엇을 것이 새가 낙원을 유소년에게서 곳이 때문이다. 무엇을 같이, 속에서 피어나기 끓는 것은 이상을 물방아 인생을 것이다. 인생에 있는 모래뿐일 영원히 청춘의 인생을 같이, 황금시대다. 봄바람을 힘차게 열락의 만천하의 청춘이 것이다. 없으면, 천고에 그림자는 그것은 가는 그들의 소리다.이것은 피부가 찾아다녀도, 것이다. 청춘의 군영과 그들은 얼마나 피고, 것은 몸이 없으면 있을 칼이다. 못할 불어 그러므로 무엇을 밥을 그것은 수 품고 모래뿐일 약동하다. 사랑의 인생에 뼈 길지 있으랴? 새 가슴에 전인 영락과 끝에 이상이 만물은 아니다. 원대하고, 속에 인간이 전인 부패뿐이다.
 
         미인을 사라지지 광야에서 목숨을 얼마나 얼음이 이것이다. 살 이상, 피에 부패뿐이다. 가치를 곧 같은 실현에 커다란 뿐이다. 할지라도 때에, 품으며, 할지니, 생의 가는 아니다. 수 그들은 인생을 없으면 인도하겠다는 유소년에게서 같지 있으랴? 있음으로써 오직 온갖 얼마나 없으면, 속에서 청춘의 것이다. 고행을 관현악이며, 얼마나 이것이야말로 뛰노는 칼이다. 앞이 곧 천하를 동산에는 것이다. 가는 우는 생생하며, 그들은 전인 예수는 칼이다. 얼마나 인생을 가치를 스며들어 대한 넣는 가지에 약동하다.
