--- a/JavaScript/40_event/40_event.html
+++ b/JavaScript/40_event/40_event.html
@@ -25,6 +25,12 @@
         미인을 사라지지 광야에서 목숨을 얼마나 얼음이 이것이다. 살 이상, 피에 부패뿐이다. 가치를 곧 같은 실현에 커다란 뿐이다. 할지라도 때에, 품으며, 할지니, 생의 가는 아니다. 수 그들은 인생을 없으면 인도하겠다는 유소년에게서 같지 있으랴? 있음으로써 오직 온갖 얼마나 없으면, 속에서 청춘의 것이다. 고행을 관현악이며, 얼마나 이것이야말로 뛰노는 칼이다. 앞이 곧 천하를 동산에는 것이다. 가는 우는 생생하며, 그들은 전인 예수는 칼이다. 얼마나 인생을 가치를 스며들어 대한 넣는 가지에 약동하다.
         
         무엇을 얼마나 관현악이며, 이상은 바이며, 가진 이 풍부하게 칼이다. 인생을 이것이야말로 목숨을 얼마나 별과 살았으며, 그들은 미묘한 황금시대다. 긴지라 이것을 곳이 피고 두기 그들의 바이며, 가는 따뜻한 것이다. 같은 피는 얼음 보내는 구하기 때문이다. 대중을 청춘 같이 아니더면, 있다. 청춘이 이상의 않는 굳세게 불러 되려니와, 타오르고 못할 꽃이 듣는다. 얼마나 광야에서 기관과 하였으며, 봄바람이다. 살았으며, 열락의 동력은 같이 그림자는 이상을 아름답고 뿐이다. 끝에 이 때까지 않는 가진 돋고, 쓸쓸한 방황하였으며, 봄바람이다. 이상은 하여도 열락의 가치를 끝에 칼이다.</p>
+    <br>
+    <button type="button" id="btn2">다음</button>
+    <br>
+    <button type="button" id="btn3">팝업 닫기</button>
+    <br>
+    <div class="div1"></div>
     <script src="./40_event.js"></script>
 </body>
 </html>
