--- a/JavaScript/41_Timer/41_Timer.html
+++ b/JavaScript/41_Timer/41_Timer.html
@@ -5,11 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <style>
+        .container {
+            width: 500px;
+            height: 100px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        .container2 {
+            width: 500px;
+            height: 100px;
+            margin: 30px auto;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1 id="nowTime">시간 로딩중...</h1>
-    <button type="button" id="stopBtn">STOP</button>
-    <button type="button" id="startBtn">START</button>
+    <div class="container">
+        <h1 id="nowTime">
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </h1>
+        <button type="button" id="stopBtn" class="btn btn-outline-dark">STOP</button>
+        <button type="button" id="startBtn" class="btn btn-outline-dark">START</button>
+    </div>
+    <div class="container2">
+        <h1 id="stopwatch" >
+            00:00:00
+        </h1>
+        <div>
+            <button onclick="startClock()" class="btn btn-outline-dark">START</button>
+            <button onclick="stopClock()" class="btn btn-outline-dark">STOP</button>
+            <button onclick="resetClock()" class="btn btn-outline-dark">RESET</button>
+        </div>
+    </div>
     <script src="./41_Timer.js"></script>
 </body>
 </html>
