--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -45,6 +45,12 @@
                         </ul>
                     </li>
                 </ul>
+                <div>
+                    <form class="d-flex serach_box" role="search">
+                        <input class="form-control me-2" type="search" placeholder="상품명" aria-label="Search">
+                        <button class="btn btn btn-outline-light" type="submit"><i class="bi bi-search"></i></button>
+                    </form>
+                </div>
             </div>
         </div>
     </nav>
@@ -54,10 +60,6 @@
         <!-- 사이드바 -->
         <div id="sidebar-wrapper" class="d-none d-sm-block">
             <ul class="sidebar-nav">
-                <form class="d-flex serach_box" role="search">
-                    <input class="form-control me-2" type="search" placeholder="상품명" aria-label="Search">
-                    <button class="btn btn btn-outline-light" type="submit"><i class="bi bi-search"></i></button>
-                </form>
                 <li><a href="#">카테고리</a></li>
                 <li><a href="#">카테고리</a></li>
                 <li><a href="#">카테고리</a></li>
