--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- 네비게이션 바 -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark bd-navbar">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark bd-navbar">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">쇼핑몰</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
